fixed overflow and media query for about

--- a/styles/about.css
+++ b/styles/about.css
@@ -41,7 +41,6 @@
     
 }
 
-
 .content>#fact{
     padding-top: 40px;
     grid-column: 1 / span 3;
@@ -57,4 +56,71 @@ img {
 
 video {
     border: solid #E6E6FA 10px;
+}
+@media (max-width: 1100px) {
+    p {
+        font-size: 14px;
+    }
+    img, video{
+        width: 320px;
+        height: 320px;
+    }
+    .content>#intro{
+        width: 40ch;
+    }
+    .content>#internship{
+        width: 40ch;
+    }
+
+}
+@media (max-width: 945px) {
+    img, video{
+        width: 70%;
+        height: 70%;
+    }
+
+    .content{
+        grid-template-columns: 1fr; 
+        grid-row-gap: 20px;
+    }
+    .content>#intro{
+        grid-column: 1 / span 1;
+       
+    }
+    .content>aside{
+        grid-column: 1 / span 1;
+    }
+    .content>p{
+        grid-column: 1 / span 1;
+        visibility: hidden;
+
+    }
+    .content>p:after{
+        visibility: visible;
+        content: "That's me!";
+        display:block;
+        margin:auto;
+    }
+    .content>#snippet{
+        grid-column: 1 / span 1;
+    }
+    
+    .content>#internship{
+        grid-column: 1 / span 1;
+    }
+    .content>figure{
+        grid-column: 1 / span 1;
+    }
+    .content>#fact{
+        padding-top: 15px;
+        grid-column: 1 / span 1;
+    }
+}
+@media (max-width: 600px) {
+    * {
+        font-size: 1.1vh;
+    }
+    p {
+        font-size: 1.5vh;
+    }
 }
